tests/compile-fail/integration_suite__integration__general__encoding_error_in_meta.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: string encoding error
  ┌─ <input>:6:17
  │
6 │     stage_name: "⏄",
  │                 ^^^ cannot be encoded using 'Shift_JIS'


